[package]
name = "ditrive"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Git Drive Sync - Automatically manage large files in Git with Google Drive"
license = "MIT"
repository = "https://github.com/yourusername/ditrive"
keywords = ["git", "google-drive", "sync", "large-files"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# OpenSSL (vendored for cross-compilation)
openssl = { version = "0.10", features = ["vendored"], optional = true }

# RSA signing for JWT
rsa = { version = "0.9", features = ["sha2"] }
base64 = "0.21"

# Git operations
git2 = "0.18"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File operations
walkdir = "2.4"
glob = "0.3"
dirs = "5.0"
sha2 = "0.10"
hex = "0.4"
mime_guess = "2.0"

# Progress bars
indicatif = "0.17"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2.1.3"
open = "5.3.3"

[[bin]]
name = "ditrive"
path = "src/main.rs"

[features]
default = []
vendored-openssl = ["openssl"]

[dev-dependencies]
tempfile = "3.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
